--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,22 @@
 <header>
   <img id="pokemon-logo" src="../../assets/images/PokemonLogo.png">
-  <!-- <div class="header-nav"> -->
     <nav class="header-nav">
+
       <div class="catalogue">
-        <!-- routerLinkActive="active" ariaCurrentWhenActive="page" -->
-          <a class="catalogue" routerLink="/pokedex" routerLinkActive="active" ariaCurrentWhenActive="page">
+          <a class="catalogue" routerLink="/pokedex" routerLinkActive="link-active">
             <img src="../../assets/images/PokemonsLogo.png">
             <p>Catalogue</p>
           </a>
       </div>
+
       <div class="trainer">
-          <a class="trainer" routerLink="/trainer">
+          <a class="trainer" routerLink="/trainer" routerLinkActive="link-active">
             <img src="../../assets/images/PokeballLogo.png">
             <p>Pokémons</p>
           </a>
-          
       </div>
+
     </nav>
-  <!-- </div> -->
 </header>
 
 <main>
