--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -1,4 +1,5 @@
 <section #cardContainer class="card-container">
+    <!-- Card front -->
   <div class="card card-front" (click)="onFrontButtonClick()">
     <div class="card-Image-Container">
       <img
@@ -12,9 +13,9 @@
       />
     </div>
     <h4 class="pokemon-name-card">{{ data.name }}</h4>
-    <button
+    <button *ngIf=pokedexRoute
       #pokeBallButton
-      class="poke-ball-button"
+      class="card-button poke-ball-button"
       (mouseover)="canFlip = false"
       (mouseout)="canFlip = true"
       (click)="catchPokemon()"
@@ -23,7 +24,12 @@
     >
       <div [class.animate]="animateDot" class="pokeBallDot"></div>
     </button>
+    <button *ngIf=trainerRoute class="card-button delete-button">
+        <img src="/assets/images/delete.png">
+    </button>
   </div>
+
+  <!-- Card back-->
   <div class="card card-back" (click)="onBackButtonClick()">
     <div
       [style.background]="getGradientStyle()"
