Feat: user get stored at login, Navbar moved to its own component

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -7,7 +7,7 @@
     <h3>Welcome!</h3>
     <!-- <p>Enter your trainer name:</p> -->
     <div>
-      <img src="../../assets/images/PokeballLoginEnter.png" />
+      <img class="load-Image" [class.animate]="animateLoad" src="../../assets/images/PokeballLoginEnter.png" />
       <input
         type="text"
         ngModel
