--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,5 @@
-<header>
-  <img id="pokemon-logo" src="../../assets/images/PokemonLogo.png">
-  <!-- <div class="header-nav"> -->
-    <nav class="header-nav">
-      <div class="catalogue">
-        <!-- routerLinkActive="active" ariaCurrentWhenActive="page" -->
-          <a class="catalogue" routerLink="/pokedex" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <img src="../../assets/images/PokemonsLogo.png">
-            <p>Catalogue</p>
-          </a>
-      </div>
-      <div class="trainer">
-          <a class="trainer" routerLink="/trainer">
-            <img src="../../assets/images/PokeballLogo.png">
-            <p>Pokémons</p>
-          </a>
-          
-      </div>
-    </nav>
-  <!-- </div> -->
-</header>
+
+<app-navbar></app-navbar>
 
 <main>
 
