--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -17,6 +17,6 @@
 }
 
 .pagination-button:hover {
-    -webkit-filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
-    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black)
+    drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
 }
