--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -394,3 +394,38 @@
     drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
   }
 }
+
+
+@keyframes loading-dots {
+  0% {
+    content: "Loading";
+  }
+  25% {
+    content: "Loading.";
+  }
+  50% {
+    content: "Loading..";
+  }
+  75% {
+    content: "Loading...";
+  }
+}
+
+.loading-dots::after  {
+  content: "Loading";
+  animation: loading-dots 0.8s infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading-image {
+  scale: 0.5;
+  animation: spin 0.8s linear infinite;
+}
