--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -140,6 +140,10 @@
   pointer-events: none;
 }
 
+img.catched {
+  opacity: 0;
+}
+
 .delete-button {
   display: flex;
   justify-content: center;
