--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
@@ -5,7 +5,7 @@
     //background-color: rgba(0, 0, 0, 0.5);
     //border-radius: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 50px;
  }
  .row {
