--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -131,14 +131,6 @@
   left: 39%;
 }
 
-.poke-ball-button {
-  background-image: url('../../../assets/images/AltPokeballClosed2.png');
-}
-
-.poke-ball-button.disabled{
-  filter: brightness(0.6);
-  pointer-events: none;
-}
 
 img.catched {
   opacity: 0;
@@ -163,10 +155,6 @@ img.catched {
   height: 170px;
 }
 
-.poke-ball-button:hover {
-  filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white)
-    drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
-}
 
 #poke-details-img-background {
   height: 40%;
@@ -269,14 +257,65 @@ img.catched {
 //   font-size: 1.7em;
 // }
 
-.poke-ball-button.animate {
+
+
+.poke-ball-button.disabled{
+  filter: brightness(0.6);
+  pointer-events: none;
+}
+.poke-ball-button:hover {
+  filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white)
+    drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
+}
+
+.poke-ball-button-pixel{
+  background-image: url('../../../assets/images/PokeballClosed.png');
+
+}
+.poke-ball-button-drawn {
+  background-image: url('../../../assets/images/AltPokeballClosed2.png');
+}
+.poke-ball-button-pixel.animate {
   //  animation: throw-ball 2s 1, wiggle 1s 3 2s;
   animation: buttonAnimation 3s 1, buttonAnimation2 1s 3 3s,
     buttonAnimation3 1s 1 6.5s;
   pointer-events: none;
 }
+.poke-ball-button-drawn.animate {
+  //  animation: throw-ball 2s 1, wiggle 1s 3 2s;
+  animation: altButtonAnimation 3s 1, buttonAnimation2 1s 3 3s,
+    buttonAnimation3 1s 1 6.5s;
+  pointer-events: none;
+}
 
 @keyframes buttonAnimation {
+  0% {
+    height: 75px;
+
+    pointer-events: none;
+    background-image: url("../../../assets/images/PokeballOpen1.png");
+  }
+  20% {
+    height: 96px;
+    background-image: url("../../../assets/images/PokeballOpen2.png");
+  }
+  65% {
+    height: 96px;
+    transform: translateY(0px);
+
+    background-image: url("../../../assets/images/PokeballOpen2.png");
+  }
+  66% {
+    background-image: url("../../../assets/images/PokeballClosed.png");
+    height: 75px;
+    pointer-events: all;
+  }
+  70% {
+    transform: translateY(25px);
+  }
+}
+
+@keyframes altButtonAnimation {
   0% {
     height: 100px;
 
@@ -337,15 +376,22 @@ img.catched {
   position: relative;
   content: "";
   background-color: red;
-  border-radius: 50%;
   opacity: 0;
   height: 10px;
   width: 10px;
+  
   left: 42%;
   top: 7%;
   filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
 }
 
+.poke-ball-dot-pixel{
+  border-radius: 10%;
+}
+
+.poke-ball-dot-drawn{
+  border-radius: 50%;
+}
 .pokeBallDot.animate {
   animation: pokeBallDotAnimation 0.8s linear;
 }
