--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,1 +1,4 @@
+<img class="brushImage"[src]="!isPixel ? '/assets/images/pixelBrush.png' : '/assets/images/handDrawnBrush.png'"alt="Change Art" 
+(click)="changeArt()"
+/>
 <app-pokemon-card-list></app-pokemon-card-list>
