fix: authguard and saving and removing pokemons

--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -26,9 +26,12 @@
     >
       <div [class.animate]="animateDot" class="pokeBallDot"></div>
     </button>
+    <!--Remove button only visible at trainer page-->
     <button 
       *ngIf=trainerRoute 
       class="card-button delete-button"
+      (mouseover)="canFlip = false"
+      (mouseout)="canFlip = true"
       (click)="removePokemon()">
         <img src="/assets/images/delete.png">
     </button>
