--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <div class="login-form-background">
   <form
     #createLoginForm="ngForm"
-    (ngSubmit)="login(createLoginForm)"
+    (ngSubmit)="formLogin(createLoginForm)"
     class="login"
   >
     <h3>Welcome!</h3>
