--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -22,5 +22,21 @@
 }
 
 .pagination-button:disabled {
+    pointer-events: none;
     opacity: 0.2;
 }
+.page-number-button{
+  padding: 5px 10px;
+  margin: 2px;
+}
+.page-number-button.active {
+    font-weight: bold;
+    color: blue;
+    border: thick solid blue;
+    
+  }
+
+  .page-number-button:hover {
+    scale: 1.1;    
+  }
+
