--- a/src/app/pages/pokedex/pokedex.page.html
+++ b/src/app/pages/pokedex/pokedex.page.html
@@ -4,5 +4,6 @@
 <app-pagination
 [currentPage]="currentPage"
 [totalPages]="totalPages"
+[itemsPerPage]="itemsPerPage"
 (pageChanged)="onPageChanged($event)"
  ></app-pagination>
