feat: search bar style

--- a/src/app/components/pokemon-search-form/pokemon-search-form.component.html
+++ b/src/app/components/pokemon-search-form/pokemon-search-form.component.html
@@ -25,7 +25,7 @@
         >
           search
         </button>
-        <img id="reset-image"src="/assets/images/reset.png" alt="R"
+        <img id="reset-image"src="/assets/images/refresh.png" alt="R"
         (click)="resetSearch()"
         />
       </div>
