feat: change between sprites completed

--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,4 +1,4 @@
-<img class="brushImage"[src]="!isPixel ? '/assets/images/pixelBrush.png' : '/assets/images/handDrawnBrush.png'"alt="Change Art" 
+<img class="brushImage"[src]="isPixel ? '/assets/images/pixelBrush.png' : '/assets/images/handDrawnBrush.png'"alt="Change Art" 
 (click)="changeArt()"
 />
 <app-trainer-pokemon-card-list></app-trainer-pokemon-card-list>
