--- a/src/app/pages/trainer/trainer.page.scss
+++ b/src/app/pages/trainer/trainer.page.scss
@@ -1,3 +1,8 @@
+#brush-image-container {
+    display: flex;
+    justify-content: center;
+}
+
 .brushImage{
     width: 94px;
     height: 106px; 
