--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,4 +1,6 @@
-<img class="brushImage"[src]="!isPixel ? '/assets/images/pixelBrush.png' : '/assets/images/handDrawnBrush.png'"alt="Change Art" 
-(click)="changeArt()"
-/>
+<div id="brush-image-container">
+    <img class="brushImage"[src]="!isPixel ? '/assets/images/pixelBrush.png' : '/assets/images/handDrawnBrush.png'"alt="Change Art" 
+    (click)="changeArt()"
+    />
+</div>
 <app-trainer-pokemon-card-list></app-trainer-pokemon-card-list>
