--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -147,6 +147,12 @@ img.catched {
   height: 30px;
 }
 
+.delete-button:hover {
+  //scale: 1.1;
+  filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px 2px 0 rgba(0, 0, 0, 0.2))
+    drop-shadow(2px -2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px -2px 0 rgba(0, 0, 0, 0.2));
+}
+
 .pokemon-details-img-container{
   user-select: none;
 }
