--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,4 +1,7 @@
-<div id="brush-image-container">
+<button class="logout-button"alt="Logout" 
+(click)="logoutClick()"
+>Logout</button> 
+<div id="brush-image-container"> 
     <img class="brushImage"[src]="isPixel ? '/assets/images/pixelBrush.png' : '/assets/images/handDrawnBrush.png'"alt="Change Art" 
     (click)="changeArt()"
     />
