--- a/src/app/pages/trainer/trainer.page.scss
+++ b/src/app/pages/trainer/trainer.page.scss
@@ -12,3 +12,9 @@
     filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white)
       drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
 }
+
+.logout-button{
+
+    width: 150px;
+    height: 106px; 
+}
